tests/golden/type_errors/len_static_invalid_type.err
Type error at 1:14: len expects array, string, map, or range, got number
  print len(123);
               ^
